# rust-search-lambda

./: cdk.json  package-lock.json  package.json
lambdas/indexer/: .gitignore  Cargo.toml
lambdas/indexer/events/: cw_event.json
lambdas/indexer/src/: main.rs
lambdas/searcher/: Cargo.toml
lambdas/searcher/events/: api.json
lambdas/searcher/src/: main.rs
lib/: rust-search-stack.ts
test/: rust-search.test.ts
