[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.77"
aws-config = "1.1.1"
aws-sdk-s3 = "1.8.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["cloudwatch_events"] }
futures = "0.3.29"

lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
tantivy = "0.21.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

